--- a/src/bin/pg_test_fsync/po/ja.po
+++ b/src/bin/pg_test_fsync/po/ja.po
@@ -1,11 +1,11 @@
 # LANGUAGE message translation file for pg_test_fsync
-# Copyright (C) 2021 PostgreSQL Global Development Group
+# Copyright (C) 2022 PostgreSQL Global Development Group
 # This file is distributed under the same license as the pg_test_fsync (PostgreSQL) package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2018.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: pg_test_fsync (PostgreSQL) 10\n"
+"Project-Id-Version: pg_test_fsync (PostgreSQL 14)\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
 "POT-Creation-Date: 2021-08-25 17:22+0900\n"
 "PO-Revision-Date: 2021-05-17 14:56+0900\n"
