--- a/src/bin/pg_upgrade/po/de.po
+++ b/src/bin/pg_upgrade/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: pg_upgrade (PostgreSQL) 14\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
 "POT-Creation-Date: 2021-08-06 21:47+0000\n"
-"PO-Revision-Date: 2021-05-13 00:10+0200\n"
+"PO-Revision-Date: 2022-05-23 19:25+0200\n"
 "Last-Translator: Peter Eisentraut <peter@eisentraut.org>\n"
 "Language-Team: German <pgsql-translators@postgresql.org>\n"
 "Language: de\n"
@@ -1544,7 +1544,7 @@ msgstr "Setze minmxid im neuen Cluster"
 #: relfilenode.c:35
 #, c-format
 msgid "Cloning user relation files\n"
-msgstr "Klonen Benutzertabellendateien\n"
+msgstr "Klone Benutzertabellendateien\n"
 
 #: relfilenode.c:38
 #, c-format
