--- a/src/bin/pg_verifybackup/po/ja.po
+++ b/src/bin/pg_verifybackup/po/ja.po
@@ -1,11 +1,11 @@
 # Japanese message translation file for pg_verifybackup
-# Copyright (C) 2021 PostgreSQL Global Development Group
+# Copyright (C) 2022 PostgreSQL Global Development Group
 # This file is distributed under the same license as the pg_verifybackup (PostgreSQL) package.
 # Haiying Tang <tanghy.fnst@cn.fujitsu.com>, 2021.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: pg_verifybackup (PostgreSQL) 13\n"
+"Project-Id-Version: pg_verifybackup (PostgreSQL 14)\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
 "POT-Creation-Date: 2021-08-25 17:22+0900\n"
 "PO-Revision-Date: 2021-05-17 16:02+0900\n"
