--- a/src/pl/plpgsql/src/po/ja.po
+++ b/src/pl/plpgsql/src/po/ja.po
@@ -1,11 +1,11 @@
 # Japanese message translation file for plpgsql
-# Copyright (C) 2021 PostgreSQL Global Development Group
+# Copyright (C) 2022 PostgreSQL Global Development Group
 # This file is distributed under the same license as the pg_archivecleanup (PostgreSQL) package.
 # HOTTA Michihde <hotta@net-newbie.com>, 2013
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: plpgsql (PostgreSQL 12 beta 1)\n"
+"Project-Id-Version: plpgsql (PostgreSQL 14)\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
 "POT-Creation-Date: 2021-08-25 17:23+0900\n"
 "PO-Revision-Date: 2021-08-25 11:38+0900\n"
